--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,24 @@
 @import url(../node_modules/bootstrap/dist/css/bootstrap.min.css);
+@font-face {
+  font-family: "Roboto-Regular";
+  src: url(../fonts/roboto/Roboto-Regular.ttf); }
+@font-face {
+  font-family: "Roboto-Light";
+  src: url(../fonts/roboto/Roboto-Light.ttf); }
+@font-face {
+  font-family: "Roboto-Thin";
+  src: url(../fonts/roboto/Roboto-Thin.ttf); }
 body {
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  font-family: "Roboto-Light"; }
 
 h1, h2 {
   font-weight: 100; }
 
 h1 {
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+  font-size: 70px;
+  font-family: "Roboto-Thin"; }
 
 h2 {
   margin-bottom: 30px; }
@@ -26,13 +38,18 @@ ul {
 
 textarea {
   margin-bottom: 70px;
-  border-radius: .3rem; }
+  border-radius: .3rem;
+  font-family: "Roboto-Regular"; }
 
 input {
-  color: #1c1c1c; }
+  color: #1c1c1c;
+  font-size: 20px;
+  font-family: "Roboto-Regular"; }
 
 label {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  font-size: 24px;
+  font-family: "Roboto-Regular"; }
 
 option {
   font-size: 20px;
@@ -47,6 +64,10 @@ a {
   color: #c8c8c8;
   font-size: 24px; }
 
+.custom-control-label {
+  font-size: 16px;
+  font-family: "Roboto-Regular"; }
+
 .form-control-lg {
   padding-top: 15px;
   padding-bottom: 5px;
@@ -54,6 +75,10 @@ a {
 
 .form-control-lg_first {
   font-size: 24px; }
+
+.nav-link {
+  font-size: 14px;
+  font-family: "Roboto-Light"; }
 
 .profile {
   padding-top: 120px;
