--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 
 body{
 	padding-bottom: 20px;
+	font-family: "Roboto-Light";
 }
 
 h1, h2{
@@ -18,6 +19,8 @@ h1, h2{
 
 h1{
 	margin-bottom: 60px;
+	font-size: 70px;
+	font-family: "Roboto-Thin";
 }
 
 h2{
@@ -44,14 +47,19 @@ ul{
 textarea{
 	margin-bottom: 70px;
 	border-radius: .3rem;
+	font-family: "Roboto-Regular";
 }
 
 input{
 	color: #1c1c1c;
+	font-size: 20px;
+	font-family: "Roboto-Regular";
 }
 
 label{
 	margin-bottom: 0;
+	font-size: 24px;
+	font-family: "Roboto-Regular";
 }
 
 option{
@@ -70,6 +78,11 @@ a{
 	font-size: 24px;
 }
 
+.custom-control-label{
+	font-size: 16px;
+	font-family: "Roboto-Regular";
+}
+
 .form-control-lg{
 	padding-top: 15px;
 	padding-bottom: 5px;
@@ -78,6 +91,11 @@ a{
 
 .form-control-lg_first{
 	font-size: 24px;
+}
+
+.nav-link{
+	font-size: 14px;
+	font-family: "Roboto-Light";
 }
 
 .profile{
@@ -90,23 +108,6 @@ a{
 	margin-top: 60px;
 	margin-bottom: 15px;
 }
-
-.effect-22,
-.effect-23,
-.effect-24 {
-//  border: 0;
-//  padding: 17px 15px 5px;
-//  border: 1px solid #ccc;
-//  position: relative;
-//  background: transparent;
-}
-//
-//.effect-22:focus ~ .focus-bg,
-//.has-content.effect-22 ~ .focus-bg {
-//  transition: 0.4s;
-//  width: 100%;
-//  background-color: #ededed;
-//}
 
 .effect-22{
 	position: relative;
